@@ -15,7 +15,7 @@ CLEANTARGETS += sdcc-clean sdcc-device-clean
 # PENDING
 INSTALLTARGETS += sdcc-install
 # PENDING
-CVSREPOSITORIES += cvs.sdcc.sourceforge.net:/cvsroot/sdcc
+CVSREPOSITORIES += cvs.sourceforge.net:/cvsroot/sdcc
 # Add sdcc to the list of source trees, that are archieved and copied to the snapshot page
 ARCHIVETREES += sdcc
 
